// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-radio #render should render component as expected (1) 1`] = `
<gux-form-field-radio>
  <mock:shadow-root>
    <div class="gux-form-field-container">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input"></slot>
        </div>
        <div aria-disabled="false" class="gux-label">
          <slot name="label"></slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input id="gux-form-field-input-i" name="food-1" slot="input" type="radio" value="pizza">
  <label for="gux-form-field-input-i" slot="label">
    Pizza
  </label>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected (2) 1`] = `
<gux-form-field-radio class="gux-disabled">
  <mock:shadow-root>
    <div class="gux-form-field-container">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input"></slot>
        </div>
        <div aria-disabled="true" class="gux-label">
          <slot name="label"></slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input disabled="" id="gux-form-field-input-i" name="food-1" slot="input" type="radio" value="pizza">
  <label for="gux-form-field-input-i" slot="label">
    Pizza
  </label>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected (3) 1`] = `
<gux-form-field-radio class="gux-input-error">
  <mock:shadow-root>
    <div class="gux-form-field-container">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input"></slot>
        </div>
        <div aria-disabled="false" class="gux-label">
          <slot name="label"></slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div class="gux-form-field-error gux-show">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input aria-describedby="gux-form-field-error-i" id="gux-form-field-input-i" name="food-1" slot="input" type="radio" value="pizza">
  <label for="gux-form-field-input-i" slot="label">
    Pizza
  </label>
  <span id="gux-form-field-error-i" slot="error">
    This is an error message
  </span>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected (4) 1`] = `
<gux-form-field-radio>
  <mock:shadow-root>
    <div class="gux-form-field-container">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input"></slot>
        </div>
        <div aria-disabled="false" class="gux-label">
          <slot name="label"></slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input checked="" id="gux-form-field-input-i" name="food-1" slot="input" type="radio" value="pizza">
  <label for="gux-form-field-input-i" slot="label">
    Pizza
  </label>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected (5) 1`] = `
<gux-form-field-radio class="gux-input-error">
  <mock:shadow-root>
    <div class="gux-form-field-container">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input"></slot>
        </div>
        <div aria-disabled="false" class="gux-label">
          <slot name="label"></slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div class="gux-form-field-error gux-show">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input aria-describedby="gux-form-field-error-i" id="gux-form-field-input-i" name="food-1" slot="input" type="radio" value="pizza">
  <label for="gux-form-field-input-i" slot="label">
    Pizza
  </label>
  <span id="gux-form-field-error-i" slot="error">
    Error message
  </span>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected (6) 1`] = `
<gux-form-field-radio class="gux-disabled gux-input-error">
  <mock:shadow-root>
    <div class="gux-form-field-container">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input"></slot>
        </div>
        <div aria-disabled="true" class="gux-label">
          <slot name="label"></slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div class="gux-form-field-error gux-show">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input aria-describedby="gux-form-field-error-i" disabled="" id="gux-form-field-input-i" name="food-1" slot="input" type="radio" value="pizza">
  <label for="gux-form-field-input-i" slot="label">
    Pizza
  </label>
  <span id="gux-form-field-error-i" slot="error">
    Error message
  </span>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected (7) 1`] = `
<gux-form-field-radio>
  <mock:shadow-root>
    <div class="gux-form-field-container">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input"></slot>
        </div>
        <div aria-disabled="false" class="gux-label">
          <slot name="label"></slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input aria-describedby="gux-form-field-help-i" id="gux-form-field-input-i" name="food-1" slot="input" type="radio" value="spaghetti">
  <label for="gux-form-field-input-i" slot="label">
    Spaghetti
  </label>
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-radio>
`;

exports[`gux-form-field-radio #render should render component as expected (8) 1`] = `
<gux-form-field-radio class="gux-disabled">
  <mock:shadow-root>
    <div class="gux-form-field-container">
      <div class="gux-input-label">
        <div class="gux-input">
          <slot name="input"></slot>
        </div>
        <div aria-disabled="true" class="gux-label">
          <slot name="label"></slot>
        </div>
      </div>
      <div class="error-and-help-text">
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <input aria-describedby="gux-form-field-help-i" disabled="" id="gux-form-field-input-i" name="food-1" slot="input" type="radio" value="spaghetti">
  <label for="gux-form-field-input-i" slot="label">
    Spaghetti
  </label>
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-radio>
`;
